2009-09-10  Bill Holmes  <billholmes54@gmail.com>

	* mini-trampolines.c (mono_delegate_trampoline) : Call
	  mono_cominterop_get_invoke if the delegate target object
	  is a COM object.

	Code is contributed under MIT/X11 license.

2009-09-09  Sebastien Pouliot  <sebastien@ximian.com>

	* method-to-ir.c: For CoreCLR throw a SecurityException if an 
	internal call is defined outside platform code. Reduce code 
	duplication with existing [Method|Field]AccessException

2009-09-08  Rodrigo Kumpera  <rkumpera@novell.com>

	* mini-x86.c (mono_arch_emit_call): Don't reduce stack usage by 4
	if the return value is a small struct passed on regs.

2009-09-09  Zoltan Varga  <vargaz@gmail.com>

	* cpu-arm.md mini-arm.c: Remove unused opcodes.

	* mini-codegen.c: Enable the cpu description validation for arm.

2009-09-08  Zoltan Varga  <vargaz@gmail.com>

	* basic-calls.cs: Move the test_0_float_load_and_store_with_big_offset ()
	test which depends on structs to objects.cs.
	
	* basic-calls.cs: Remove calls to Console.WriteLine and throws, since those
	require object model related stuff working.

	* cpu-x86.md mini-x86.c: Remove more unused opcodes.

	* mini-ops.h: Fix OP_BIGMUL instruction descriptions.

	* mini-codegen.c (mono_local_regalloc): Validate the cpu description 
	against the instruction metadata in mini-ops.h. amd64 only for now.

	* mini-ops.h: Fix some instruction descriptions.

	* mini-ops.h mini-x86.c mini-amd64.c cpu-<ARCH>.md: Remove some
	unused instructions.

2009-09-06  Zoltan Varga  <vargaz@gmail.com>

	* exceptions.cs: Add a new test.

2009-09-05  Rodrigo Kumpera  <rkumpera@novell.com>

	* mini-x86.c (needs_stack_frame): OSX requires full frames to keep proper alignment.

2009-09-06  Zoltan Varga  <vargaz@gmail.com>

	* mini-llvm.c (mono_llvm_emit_method): Add a few more missing casts,
	skip empty phi opcodes.
	
	* mini-llvm.c (mono_llvm_emit_method): Handle unsigned volatile variables